[gd_scene load_steps=8 format=3 uid="uid://777pk3h7fx24"]

[ext_resource type="Script" uid="uid://c3xnumum2i0o6" path="res://Interface/menu.gd" id="1_f1ob2"]
[ext_resource type="Texture2D" uid="uid://c7rixll1vxb2" path="res://Art/MenuArt/Menu.png" id="2_tel4v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("2_tel4v")
modulate_color = Color(0.593134, 0.593134, 0.593134, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.60933, 0.60933, 0.60933, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1ob2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.5
offset_right = 91.5
offset_bottom = 56.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.800491, 0.800491, 0.800491, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 24
text = "Templo Perdido"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main_buttons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -59.0
offset_right = 63.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Iniciar" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Iniciar"

[node name="Creditos" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Creditos"

[node name="Fechar" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Fechar"

[node name="Credits" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -50.0
offset_right = 244.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2

[node name="Voltar" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 28.5
offset_right = 98.0
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Voltar"

[node name="OptionsTitle" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -2.0
offset_top = -49.0
offset_right = -2.0
offset_bottom = 4.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "Creditos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.5
offset_top = -85.5
offset_right = 219.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="OptionsTitle" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 18
text = "Um jogo estilo Roguelike feito no Godot Engine

Programador                          "
horizontal_alignment = 1
vertical_alignment = 1

[node name="GithubLinks" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 14.5
offset_top = -77.5
offset_right = 195.5
offset_bottom = 53.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Ramon" type="LinkButton" parent="Credits/GithubLinks"]
layout_mode = 2
text = "Ramon B. Lima"
uri = "https://github.com/limamon"

[connection signal="pressed" from="Main_buttons/Iniciar" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Main_buttons/Creditos" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Main_buttons/Fechar" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Credits/Voltar" to="." method="_on_back_options_pressed"]
